updated gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ __pycache__/
 02 Cascade tutorial/environment_mac.yml
 02 Cascade tutorial/requirements_mac.txt
 03 Linking Behavior and Neuronal Activity/generate_toy_behavior.py
+Sue_2x_3000_40_-46.tif
+*.tif
+*.tiff
